admin@applab.student.com/src/AppExchange Laboratory Recruiting App Components/objects/Position__c.object
<CustomObject>
    <description>This is change #5 on Position object</description>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>ROUND( NOW() -  CreatedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hello__c</fullName>
        <label>Hello</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Position_Number__c</fullName>
        <externalId>true</externalId>
        <indexed>true</indexed>
        <label>Legacy Position Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operating_Systems__c</fullName>
        <label>Operating Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pay_Grade__c</fullName>
        <label>Pay Grade</label>
        <picklist>
            <picklistValues>
                <fullName>ENG-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENG-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <picklist>
            <picklistValues>
                <fullName>COBOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORTRAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>General Positions</fullName>
        <active>true</active>
    </recordTypes>
    <recordTypes>
        <fullName>Non-Technical Positions</fullName>
        <active>true</active>
    </recordTypes>
    <recordTypes>
        <fullName>Technical Positions</fullName>
        <active>true</active>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Temporary_Position_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &quot;Temp&quot;) ,  NULLVALUE( Duration__c , 0)  &lt;= 0 )</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Temp Positions require a positive Duration value</errorMessage>
    </validationRules>
</CustomObject>